--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'idea'
 apply plugin: 'groovy'
 
-repositories{
-	mavenCentral()
+repositories {
+    mavenCentral()
+    mavenRepo urls: "http://m2repo.spockframework.org/releases"
 }
 
 sourceSets {
@@ -11,14 +12,17 @@ sourceSets {
             srcDir 'src'
         }
     }
-	test{
-		groovy {
+    test {
+        groovy {
             srcDir 'test'
-}
         }
+    }
 }
 
 dependencies {
     groovy group: 'org.codehaus.groovy', name: 'groovy', version: '1.8.0'
     compile group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.5.1'
+    testCompile("org.spockframework:spock-core:0.5-groovy-1.8"){
+        exclude module : 'groovy-all'
+    }
 }
