--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ sourceSets {
 dependencies {
     groovy group: 'org.codehaus.groovy', name: 'groovy', version: '1.8.0'
     compile group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.5.1'
-    testCompile("org.spockframework:spock-core:0.5-groovy-1.8"){
+    testCompile(group: 'org.spockframework' , name: 'spock-core', version: '0.5-groovy-1.8'){
         exclude module : 'groovy-all'
     }
 }
