--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ sourceSets {
         groovy {
             srcDir 'src'
         }
+        resources {
+            srcDir 'resources'
+        }
     }
     test {
         groovy {
