--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ sourceSets {
 dependencies {
     groovy group: 'org.codehaus.groovy', name: 'groovy', version: '1.8.0'
     compile group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.5.1'
+    compile group: 'log4j', name: 'log4j', version: '1.2.16'
+    compile group: 'commons-logging', name: 'commons-logging', version: '1.1.1'
     testCompile(group: 'org.spockframework' , name: 'spock-core', version: '0.5-groovy-1.8'){
         exclude module : 'groovy-all'
     }
