Change Maven repo params to match Gradle's new version requeriments

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'groovy'
 
 repositories {
     mavenCentral()
-    mavenRepo urls: "http://m2repo.spockframework.org/releases"
+    mavenRepo url: "http://m2repo.spockframework.org/releases"
 }
 
 sourceSets {
