--- a/build.gradle
+++ b/build.gradle
@@ -33,3 +33,8 @@ dependencies {
     compile group: 'commons-logging', name: 'commons-logging', version: '1.1.1'
     compile group: 'log4j', name: 'log4j', version: '1.2.16'
 }
+
+task run(dependsOn: 'classes', type: JavaExec) {
+    main = 'mn.david.cheapertickets.CheaperTickets'
+    classpath = sourceSets.main.runtimeClasspath
+}
